Setup admin frontend.

--- a/apps/admin/src/index.html
+++ b/apps/admin/src/index.html
@@ -8,6 +8,6 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
   </head>
   <body>
-    <angular-nest-eccomerce-platform-root></angular-nest-eccomerce-platform-root>
+    <app-root></app-root>
   </body>
 </html>
